--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/AdvGamesProgramming")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/AdvGamesProgramming")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="AdvGamesProgrammingGameModeBase")
++ActiveClassRedirects=(OldClassName="Tile",NewClassName="/Script/AdvGamesProgramming.Tile")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
