Reimport WFC assets and test in level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/AdvGamesProgramming")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="AdvGamesProgrammingGameModeBase")
 +ActiveClassRedirects=(OldClassName="Tile",NewClassName="/Script/AdvGamesProgramming.Tile")
++ActiveClassRedirects=(OldClassName="TileSet",NewClassName="/Script/AdvGamesProgramming.TileSet")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
