--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,7 +27,7 @@ CategorySlot5=Five
 CategorySlot6=Six
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.Bloom=False
+r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
