--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,3 +25,11 @@ CategorySlot2=Two
 CategorySlot3=Three
 CategorySlot5=Five
 CategorySlot6=Six
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+
